--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.6.1
 appdirs==1.4.4
+asyncio==3.4.3
 beautifulsoup4==4.9.1
 billiard==3.6.3.0
 celery==4.4.7
@@ -13,6 +14,7 @@ eventlet==0.26.1
 filelock==3.0.12
 Flask==1.1.2
 Flask-SocketIO==4.3.1
+gevent==20.6.2
 greenlet==0.4.16
 idna==2.10
 importlib-metadata==1.7.0
@@ -52,3 +54,5 @@ virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 wordcloud==1.7.0
 zipp==1.2.0
+zope.event==4.4
+zope.interface==5.1.0
