--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 node_modules
 
-ml/kmeans_model/
-ml/dump.rdb
+/ml/kmeans_model/
+/ml/kmeans/
+/ml/spark-warehouse/
+/ml/dump.rdb
 
 ### Django ###
 *.log
